@@ -113,6 +113,9 @@ setGeneric("is.subset",
 setGeneric("is.significant",
     function(x, transactions, alpha = 0.01, adjust = "bonferroni") standardGeneric("is.significant"))
 
+setGeneric("is.redundant",
+    function(x, ...) standardGeneric("is.redundant"))
+
 #setGeneric("labels",
 #    function(object, ...) standardGeneric("labels"))
 
